# bash-like-cpp-shell

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
.github/workflows/: build.yml  dependabot-auto-merge.yml
include/: LICENSES.md  README.md
src/: action.cpp  action.hpp  alias.cpp  alias.hpp  bg-process-state.class.cpp  bg-process-state.class.hpp  bg-processes.cpp  bg-processes.hpp  command-chain.class.cpp  command-chain.class.hpp  command-position.enum.cpp  command-position.enum.hpp  command.class.cpp  command.class.hpp  input-kind.enum.cpp  input-kind.enum.hpp  lib.cpp  lib.hpp  main.cpp  main.hpp  parse.cpp  parse.hpp  parsed-input-data.class.cpp  parsed-input-data.class.hpp  pipe-end.enum.cpp  pipe-end.enum.hpp  pipe.class.cpp  pipe.class.hpp  properties.cpp  properties.hpp  strings.cpp  strings.hpp
tests/: Makefile  run.sh  run_all_tests.sh  strings_test.cpp
